# ALPACA-test-bench

./: .env.example  .gitignore  AI_INSTRUCTIONS.md  README.md  main.py  pyproject.toml  requirements.txt  результаты.md
Documents/: 1. ТестOCR.docx  2. странный текст без форматирования.docx  3. Договор с таблицей.doc  4. Неструктурированный список.docx
configs/: processors_config.py  system_configurator.py
outputs/: .gitkeep
src/: __init__.py  cli.py
src/core/: __init__.py  base.py  pipeline.py
src/processors/: __init__.py  docx_processors.py  markdown_converters.py  markitdown_processors.py  pdf_processors.py  text_cleaners.py  unstructured_processors.py
src/ui/: streamlit_app.py
src/utils/: __init__.py  file_manager.py  llm_client.py  logger.py  metrics.py
test_files/: README.md
